--- a/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_device_register.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_device_register.xml
@@ -264,6 +264,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginHorizontal="20dp"
+                android:layout_marginBottom="20dp"
                 android:orientation="vertical">
 
                 <Button
