--- a/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_family_accept.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_family_accept.xml
@@ -261,30 +261,48 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
+                android:gravity="center"
                 android:orientation="horizontal"
-                android:weightSum="10">
+                android:weightSum="11">
 
                 <Space
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="2" />
+                    android:layout_weight="1" />
 
                 <Button
                     android:id="@+id/acceptBtn"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="6"
+                    android:layout_weight="4"
                     android:backgroundTint="#E3F2C1"
                     android:fontFamily="@font/tmoney_bold"
                     android:includeFontPadding="false"
-                    android:text="가족 요청 수락하기"
+                    android:text="가족 요청 수락"
                     android:textColor="#757863" />
 
                 <Space
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="2" />
+                    android:layout_weight="1" />
+
+                <Button
+                    android:id="@+id/refuseBtn"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="4"
+                    android:backgroundTint="#FF9B9B"
+                    android:fontFamily="@font/tmoney_bold"
+                    android:includeFontPadding="false"
+                    android:text="가족 요청 거절"
+                    android:textColor="#757863" />
+
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
+
             </LinearLayout>
 
         </LinearLayout>
