add: 가족 없을 경우 추가

--- a/frontend/EYAK(rev2)/app/src/main/res/layout/family_tab_main.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/family_tab_main.xml
@@ -5,6 +5,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:id="@+id/emptyFamilyLinearLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:tint="#D3D3D3"
+            app:srcCompat="@drawable/baseline_person_24" />
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:fontFamily="@font/tmoney_regular"
+            android:gravity="center"
+            android:includeFontPadding="false"
+            android:text="아무것도 없어:약"
+            android:textColor="#757863"
+            android:textSize="26sp" />
+    </LinearLayout>
+
     <FrameLayout
         android:id="@+id/frameLayout2"
         android:layout_width="match_parent"
