--- a/frontend/EYAK(rev2)/app/src/main/res/layout/medicine_tab_main.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/medicine_tab_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:id="@+id/emptyLinearLayout"
+        android:id="@+id/emptyMedicineLinearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
