--- a/frontend/EYAK(rev2)/app/src/main/res/layout/device_tab_main.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/device_tab_main.xml
@@ -20,17 +20,30 @@
                 android:layout_height="wrap_content"
                 android:text="뒤로" />
 
+            <TextView
+                android:id="@+id/deviceEditTitleText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginVertical="10dp"
+                android:fontFamily="@font/tmoney_bold"
+                android:gravity="center"
+                android:text="약을 끌어서 약통에 배치하세요!"
+                android:textAlignment="viewStart"
+                android:textColor="#757863"
+                android:textSize="20sp" />
+
             <HorizontalScrollView
                 android:id="@+id/deviceScroll"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="50dp"
                 android:layout_marginEnd="10dp">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:layout_margin="10dp"
                     android:gravity="center"
                     android:orientation="horizontal">
 
@@ -46,35 +59,21 @@
                                 android:id="@+id/btEditCell1"
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
-                                android:background="@drawable/baseline_check_box_outline_blank_24"
+                                android:layout_margin="5dp"
+                                android:background="#AAABAE"
                                 android:backgroundTint="#AAABAE"
                                 android:gravity="center"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:id="@+id/btEditCell1Text"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:gravity="center"
-                                    android:text="text" />
-                            </LinearLayout>
+                                android:orientation="vertical" />
 
                             <LinearLayout
                                 android:id="@+id/btEditCell2"
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
-                                android:background="@drawable/baseline_check_box_outline_blank_24"
+                                android:layout_margin="5dp"
+                                android:background="#AAABAE"
                                 android:backgroundTint="#AAABAE"
                                 android:gravity="center"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:id="@+id/btEditCell2Text"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:gravity="center"
-                                    android:text="text" />
-                            </LinearLayout>
+                                android:orientation="vertical" />
 
                         </TableRow>
 
@@ -85,89 +84,84 @@
                             <LinearLayout
                                 android:id="@+id/btEditCell3"
                                 android:layout_width="100dp"
-                                android:layout_height="match_parent"
-                                android:background="@drawable/baseline_check_box_outline_blank_24"
+                                android:layout_height="100dp"
+                                android:layout_margin="5dp"
+                                android:background="#AAABAE"
                                 android:backgroundTint="#AAABAE"
                                 android:gravity="center"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:id="@+id/btEditCell3Text"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:gravity="center"
-                                    android:text="TextView" />
-                            </LinearLayout>
+                                android:orientation="vertical" />
 
                             <LinearLayout
                                 android:id="@+id/btEditCell4"
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
-                                android:background="@drawable/baseline_check_box_outline_blank_24"
+                                android:layout_margin="5dp"
+                                android:background="#AAABAE"
                                 android:backgroundTint="#AAABAE"
                                 android:gravity="center"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:id="@+id/btEditCell4Text"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:gravity="center"
-                                    android:text="TextView" />
-                            </LinearLayout>
+                                android:orientation="vertical" />
                         </TableRow>
 
                     </TableLayout>
 
                     <LinearLayout
                         android:id="@+id/btEditCell5"
-                        android:layout_width="200dp"
-                        android:layout_height="200dp"
-                        android:background="@drawable/baseline_check_box_outline_blank_24"
+                        android:layout_width="210dp"
+                        android:layout_height="210dp"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginEnd="20dp"
+                        android:background="#AAABAE"
                         android:backgroundTint="#AAABAE"
                         android:gravity="center"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/btEditCell5Text"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="TextView" />
-                    </LinearLayout>
+                        android:orientation="vertical" />
 
                 </LinearLayout>
             </HorizontalScrollView>
+
+            <TextView
+                android:id="@+id/medicineScrollNonText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginVertical="10dp"
+                android:fontFamily="@font/tmoney_bold"
+                android:gravity="center"
+                android:text="등록된 약이 없습니다"
+                android:textColor="#757863"
+                android:textSize="20sp" />
 
             <HorizontalScrollView
                 android:id="@+id/medicineScroll"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginEnd="10dp">
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginVertical="5dp">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:id="@+id/medicineScrollLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:gravity="center"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/testEditImage1"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_marginRight="30dp"
-                        app:srcCompat="@drawable/baseline_access_time_24" />
-
-                    <ImageView
-                        android:id="@+id/testEditImage2"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_marginRight="30dp"
-                        android:layout_weight="1"
-                        app:srcCompat="@drawable/baseline_access_time_24" />
                 </LinearLayout>
             </HorizontalScrollView>
+
+            <TextView
+                android:id="@+id/settingEditTitleText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/tmoney_bold"
+                android:gravity="center"
+                android:text="약통의 알림 방식을 설정하세요!"
+                android:textAlignment="viewStart"
+                android:textColor="#757863"
+                android:textSize="20sp" />
 
             <Switch
                 android:id="@+id/deviceSoundSwitch"
@@ -188,6 +182,17 @@
                 android:layout_marginVertical="10dp"
                 android:fontFamily="@font/tmoney_bold"
                 android:text="알림 진동"
+                android:textColor="#757863"
+                android:textSize="16sp" />
+
+            <Button
+                android:id="@+id/deviceEditSaveBtn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:backgroundTint="#E3F2C1"
+                android:fontFamily="@font/tmoney_bold"
+                android:text="저장하기"
                 android:textColor="#757863"
                 android:textSize="16sp" />
 
