--- a/frontend/EYAK(rev2)/app/src/main/res/layout/family_tab_main.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/family_tab_main.xml
@@ -34,6 +34,34 @@
             android:text="아무것도 없어:약"
             android:textColor="#757863"
             android:textSize="26sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView30"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/tmoney_regular"
+                android:gravity="center"
+                android:includeFontPadding="false"
+                android:text="추가는: 저기약"
+                android:textColor="#757863"
+                android:textSize="13sp" />
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_gravity="right"
+                android:rotation="90"
+                android:tint="#D3D3D3"
+                app:srcCompat="@drawable/baseline_arrow_outward_24" />
+
+        </LinearLayout>
+
     </LinearLayout>
 
     <FrameLayout
