--- a/frontend/EYAK(rev2)/app/src/main/res/layout/family_tab_main.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/family_tab_main.xml
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,8 +54,8 @@
 
             <ImageView
                 android:id="@+id/imageView4"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_gravity="right"
                 android:rotation="90"
                 android:tint="#D3D3D3"
