--- a/frontend/EYAK(rev2)/app/src/main/res/layout/device_tab_edit_view_item.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/device_tab_edit_view_item.xml
@@ -22,8 +22,8 @@
 
             <ImageView
                 android:id="@+id/deviceMedicImage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:layout_marginRight="10dp"
                 app:srcCompat="@drawable/baseline_access_time_24" />
 
