--- a/frontend/EYAK(rev2)/app/src/main/res/layout/activity_signup.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/activity_signup.xml
@@ -589,10 +589,10 @@
                         android:textColor="#757863"
                         android:textSize="20sp" />
 
-                    <ScrollView
+                    <androidx.core.widget.NestedScrollView
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
-                        android:paddingTop="10dp">
+                        android:fillViewport="true">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -745,7 +745,7 @@
                                 android:textSize="12sp" />
 
                         </LinearLayout>
-                    </ScrollView>
+                    </androidx.core.widget.NestedScrollView>
 
                     <CheckBox
                         android:id="@+id/checkBox"
