--- a/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_medicine_add_result.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_medicine_add_result.xml
@@ -16,7 +16,7 @@
             android:orientation="vertical" >
 
             <TextView
-                android:id="@+id/textView32"
+                android:id="@+id/medicineAddResultTitleTextView"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:fontFamily="@font/tmoney_bold"
